# CodeResearch_Agent

./: .env.example  .gitignore  AGENTS.md  README.md  compose.team.yml  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-gpu-cu12.txt  requirements-team.txt  requirements.txt
backend/: __init__.py
backend/app/: __init__.py  main.py
config/: default.yaml  local-cpu.yaml  models.yaml  team-autodl-gpu.yaml
deploy/: Caddyfile  Dockerfile.api  Dockerfile.frontend  nginx.conf  postgres-init.sh  redis.conf
deploy/autodl/: backup.sh  bootstrap.sh  install-services.sh  restore-verify.sh  run-service.sh  start.sh  status.sh  stop.sh  supervisord.conf
docs/: agent_workflow.md  api_reference.md  architecture.md  baseline_v1.4.0.md  baseline_v1.5.0.md  baseline_v1.6.0.md  baseline_v1.8.0.md  baseline_v1.9.0.md  database.md  demo_guide.md  evaluation.md  evaluation_v1.9.0.md  faq.md  frontend_guide.md  interview_guide.md  research_agent_v1.6.0.md  resume.md  screenshots.md  security_v2.md  validation.md
docs/history/: agent_workflow.md  alignment_v1.7.0.md  baseline_v1.3.5.md  baseline_v1.7.0.md  baseline_v1.8.0.md  cleanup_v1.3.5_results.md  database.md  demo_guide.md  deployment_v2.md  evaluation_baseline_v1.3.5.md  frontend_guide.md  interview_guide.md  observability_v1.8.0.md  resume.md  screenshots.md  (+8 more)
evaluation/: __init__.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.typecheck.json  vite.config.js  vite.config.ts
plan/: README.md  need.md  plan_stage11.md  plan_stage12.md  plan_stage2.md  plan_stage6.md  plan_v1.6.0.md  plan_v1.9.0.md  plan_v2.0.0.md
requirements/: base.in  cpu.in  dev.in  gpu-cu12.in  team.in
scripts/: benchmark_evaluation.py  benchmark_observability.py  build_example_zip.py  clean.sh  dev.sh  evaluate_agent.py  evaluate_alignment.py  evaluate_regression.py  evaluate_retrieval.py  release_security_gate.sh  reset_runtime_data.sh  run_retrieval_benchmark.py  smoke_image.py  smoke_llm.py  smoke_vlm.py  validate.sh  validate_alignment_gold.py
tests/: conftest.py  test_ai_usage.py  test_analysis_options.py  test_api_request_model.py  test_api_results.py  test_api_upload.py  test_ast_parse_tool.py  test_cleanup_scripts.py  test_diagram_generate_node.py  test_example_archive_contract.py  test_file_analyze_tool.py  test_function_analyze_tool.py  test_langgraph_workflow.py  test_library_api.py  test_library_call_extractor_tool.py  test_library_function_doc_node.py  test_library_function_resolver_tool.py  test_library_function_service.py  test_llm_budget.py  test_llm_config.py  test_llm_consent.py  test_llm_evidence.py  test_llm_privacy.py  test_llm_prompt_injection.py  test_llm_providers.py  test_llm_workflow.py  test_mermaid_tool.py  test_model_analyze_node.py  test_model_detect_tool.py  test_model_router.py  test_paper_code_align_tool.py  test_paper_code_link_validator.py  test_paper_figure_extract_tool.py  test_paper_nodes.py  test_paper_parse_tool.py  test_provider_response_utils.py  test_provider_settings.py  test_public_import_contract.py  test_repo_scan_tool.py  test_task_progress.py  (+6 more)
(+473 files in other folders)
