[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-research-agent"
version = "2.0.0"
description = "LangGraph-based minimal code repository analysis agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "langgraph>=1.0.10,<2.0",
  "pymupdf>=1.24.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "argon2-cffi>=23.1.0,<26.0.0",
  "PyYAML>=6.0.3,<7.0.0",
  "cryptography>=46.0.3,<47.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "langgraph-checkpoint-sqlite>=3.1.0,<3.2.0",
]
secrets = [
  "keyring>=25.0.0",
]
retrieval = [
  "qdrant-client>=1.18.0,<2.0",
  "fastembed>=0.8.0,<0.9.0",
  "onnxruntime>=1.27.0,<1.28.0",
]
retrieval-gpu = [
  "qdrant-client>=1.18.0,<2.0",
  "fastembed-gpu>=0.8.0,<0.9.0",
  "onnxruntime-gpu>=1.27.0,<1.28.0",
]
agent = [
  "langgraph-checkpoint-sqlite>=3.1.0,<3.2.0",
]
observability = [
  "opentelemetry-api>=1.44.0,<1.45.0",
  "opentelemetry-sdk>=1.44.0,<1.45.0",
  "opentelemetry-exporter-otlp-proto-http>=1.44.0,<1.45.0",
]
team = [
  "psycopg[binary,pool]>=3.2.0,<4.0.0",
  "celery[redis]>=5.4.0,<6.0.0",
  "boto3>=1.35.0,<2.0.0",
  "langgraph-checkpoint-postgres>=2.0.0,<4.0.0",
  "qdrant-client>=1.12.0,<2.0.0",
  "supervisor>=4.3.0,<5.0.0",
]

[project.scripts]
cra = "backend.app.control_plane.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
